--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,15 @@
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^17.2.1",
     "express": "~4.16.1",
     "mongoose": "^8.17.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "uid2": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
