--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^17.2.1",
     "express": "~4.16.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.17.0",
     "morgan": "~1.9.1",
     "uid2": "^1.0.0"
