--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "moment": "^2.30.1",
     "mongoose": "^8.17.0",
     "morgan": "~1.9.1",
+    "nanoid": "^5.1.5",
+    "socket.io": "^4.8.1",
     "uid2": "^1.0.0"
   },
   "devDependencies": {
