--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@reduxjs/toolkit": "^2.8.2",
     "bcrypt": "^6.0.0",
+    "fontawesome": "^5.6.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1"
   },
