--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@reduxjs/toolkit": "^2.8.2",
+    "antd": "^4.21.6",
     "bcrypt": "^6.0.0",
     "next": "12.1.6",
     "react": "18.1.0",
