--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "antd": "^4.21.6",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.1",
     "fontawesome": "^5.6.3",
     "next": "12.1.6",
     "react": "18.1.0",
